--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Malla Curricular Interactiva</title>
+    <title>Malla Curricular - Columnas por Año</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Malla Curricular Interactiva</h1>
+    <h1>Malla Interactiva por Años (Columnas)</h1>
     <div id="controls">
         <button onclick="addYear()">➕ Agregar Año</button>
         <button onclick="resetMalla()">🗑️ Reiniciar Malla</button>
     </div>
-    <div id="malla"></div>
+    <div id="malla" class="grid-container"></div>
     <script src="materias.js"></script>
     <script src="app.js"></script>
 </body>
