--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Curricular con Correlatividades</title>
+  <title>Malla Curricular Avanzada</title>
   <style>
     body {
       background: #f5f5f5;
@@ -38,55 +38,56 @@
       min-height: 28px;
     }
     .materia {
-      border-radius: 10px;
-      padding: 10px 8px 8px 8px;
-      margin-bottom: 3px;
-      min-height: 100px;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px #0001;
+      border: 2.5px solid #888;
+      min-height: 110px;
       position: relative;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: center;
+      align-items: center;
       font-size: 0.95em;
       color: #111 !important;
-      border: 2px solid #ddd;
-      box-shadow: 0 2px 8px #0001;
-      transition: background 0.3s;
-      opacity: 1;
+      background-size: cover;
+      background-position: center;
+      background-blend-mode: lighten;
+      background-repeat: no-repeat;
       cursor: pointer;
+      transition: box-shadow 0.2s, border 0.2s, filter 0.2s;
+      z-index: 1;
     }
-    .materia.inhabilitada {
-      opacity: 0.4;
-      filter: grayscale(0.7);
-      pointer-events: none;
-    }
-    .materia .acciones {
-      position: absolute;
-      top: 2px;
-      right: 5px;
+    .materia:hover {
+      box-shadow: 0 0 12px #8886;
+      border-color: #333;
+      filter: brightness(0.96);
       z-index: 2;
-      display: flex;
-      gap: 4px;
     }
-    .materia .acciones button {
-      background: #fff;
-      border: 1px solid #bbb;
-      border-radius: 3px;
-      font-size: 0.8em;
-      padding: 2px 6px;
-      cursor: pointer;
-      opacity: 0.7;
-    }
-    .materia .acciones button:hover { opacity: 1; background: #eee;}
-    .codigo {
+    .materia .codigo {
       font-size: 0.85em;
+      font-weight: normal;
+      color: #666;
+      position: absolute;
+      top: 7px;
+      left: 12px;
+      opacity: 0.7;
+      letter-spacing: 0.5px;
+    }
+    .materia .nombre {
+      font-size: 1.1em;
       font-weight: bold;
-      margin-bottom: 2px;
+      text-align: center;
+      margin: 0 auto;
+      margin-top: 8px;
+      margin-bottom: 6px;
+      width: 90%;
+      z-index: 2;
       color: #111;
     }
-    .creditos {
+    .materia .creditos {
       position: absolute;
-      bottom: 8px;
-      right: 12px;
+      bottom: 9px;
+      right: 14px;
       background: #fffde7;
       color: #111;
       border-radius: 50%;
@@ -97,29 +98,77 @@
       align-items: center;
       justify-content: center;
       border: 1px solid #bdbdbd;
-      box-shadow: 0 1px 3px #0001;
+      box-shadow: 0 1px 3px #0002;
+      opacity: 0.9;
     }
-    .checkbox-aprobada {
+    .materia .checkbox-aprobada {
       position: absolute;
-      left: 8px;
-      bottom: 8px;
+      left: 12px;
+      bottom: 10px;
       font-size: 1.2em;
     }
-    .materia span {
-      display: block;
+    .materia.aprobada {
+      text-decoration: line-through;
+      filter: grayscale(0.5) brightness(1.12) opacity(0.8);
+      border-style: dashed;
     }
-    .btn, button, input[type="button"] {
+    .materia.inhabilitada {
+      opacity: 0.4;
+      filter: grayscale(0.7);
+      pointer-events: none;
+    }
+    /* Tooltip */
+    .materia .tooltip-correlativas {
+      display: none;
+      position: absolute;
+      left: 50%; top: 0;
+      transform: translate(-50%, -120%);
+      background: #333e;
+      color: #fff;
+      font-size: 0.9em;
+      padding: 6px 14px;
+      border-radius: 8px;
+      z-index: 10;
+      white-space: pre-line;
+      min-width: 160px;
+      text-align: center;
+    }
+    .materia:hover .tooltip-correlativas {
+      display: block;
+      pointer-events: none;
+    }
+    .materia .bg-imagen {
+      position: absolute;
+      left:0;top:0;width:100%;height:100%;
+      opacity: 0.18;
+      z-index: 0;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+    .materia .acciones {
+      position: absolute;
+      top: 6px;
+      right: 11px;
+      z-index: 3;
+      display: flex;
+      gap: 4px;
+    }
+    .materia .acciones button {
       background: #fff;
       border: 1px solid #bbb;
       border-radius: 4px;
-      padding: 4px 10px;
-      margin: 2px 0;
-      font-size: 1em;
+      font-size: 0.8em;
+      padding: 2px 7px;
       cursor: pointer;
-      transition: background .2s;
+      opacity: 0.7;
+      transition: background 0.2s;
     }
-    .btn:hover, button:hover, input[type="button"]:hover {
-      background: #eee;
+    .materia .acciones button:hover { opacity: 1; background: #eee;}
+    .acciones-malla {
+      margin: 15px 0 10px 0;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
     }
     .editor-modal {
       position: fixed;
@@ -135,7 +184,7 @@
       border-radius: 10px;
       min-width: 320px;
       box-shadow: 0 0 14px #0004;
-      max-width: 90vw;
+      max-width: 95vw;
       max-height: 95vh;
       overflow: auto;
     }
@@ -151,15 +200,6 @@
     .editor-content .botonera {
       display: flex; gap: 10px; justify-content: flex-end;
       margin-top: 10px;
-    }
-    .acciones-malla {
-      margin: 15px 0 10px 0;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-    .acciones-malla input, .acciones-malla button {
-      min-width: 120px;
     }
     @media (max-width: 900px) {
       .malla { min-width: 0; max-width: 100vw; grid-template-columns: repeat(2, 1fr);}
@@ -198,6 +238,8 @@
         <select id="mat-categoria"></select>
         <label>Correlativas (códigos separados por coma):</label>
         <input type="text" id="mat-correlativas" placeholder="Ej: MAT021,FIS100">
+        <label>Imagen de fondo (URL completa, opcional):</label>
+        <input type="text" id="mat-bgimg" placeholder="https://...jpg">
         <div class="botonera">
           <button type="submit">Guardar</button>
           <button type="button" onclick="cerrarMateriaEditor()">Cancelar</button>
@@ -227,19 +269,19 @@
     let anios = ["Año 1","Año 2","Año 3","Año 4","Año 5","Año 6"];
     let periodos = ["I","III","V","VII","IX","XI"];
     let materias = [
-      // año, periodo, código, nombre, créditos, categoría, correlativas (array de códigos)
-      [1, 1, "IVI1131", "Programación", 5, "Básica", []],
-      [1, 1, "QUI010", "Química y Sociedad", 5, "Básica", []],
-      [2, 3, "MAT035", "Probabilidad y Estadística", 7, "Matemática", ["MAT021"]],
-      [3, 5, "MEC220", "Mecánica de Fluidos Avanzadas", 5, "Ingeniería", ["MAT035"]],
-      [4, 7, "MEC373", "Automatización y Neumática", 5, "Ingeniería", ["MEC220"]],
-      [5, 9, "MEC397", "Seminario de Titulación", 13, "Ingeniería", ["MEC373"]],
-      [1, 1, "MAT021", "Matemáticas I", 8, "Matemática", []],
-      [1, 1, "MAT022", "Matemáticas II", 8, "Matemática", []],
-      [2, 3, "FIS140", "Física General IV", 5, "Física", ["QUI010"]],
-      [3, 5, "MEC353", "Mecánica de Máquinas", 5, "Ingeniería", ["MEC220"]],
-      [4, 7, "MEC382", "Ingeniería del Mantenimiento", 5, "Ingeniería", ["MEC373"]],
-      [6, 11, "MEC5", "Electivo 5", 5, "Optativo", []]
+      // año, periodo, código, nombre, créditos, categoría, correlativas (array de códigos), imagen de fondo (url)
+      [1, 1, "IVI1131", "Programación", 5, "Básica", [], ""],
+      [1, 1, "QUI010", "Química y Sociedad", 5, "Básica", [], ""],
+      [2, 3, "MAT035", "Probabilidad y Estadística", 7, "Matemática", ["MAT021"], ""],
+      [3, 5, "MEC220", "Mecánica de Fluidos Avanzadas", 5, "Ingeniería", ["MAT035"], ""],
+      [4, 7, "MEC373", "Automatización y Neumática", 5, "Ingeniería", ["MEC220"], ""],
+      [5, 9, "MEC397", "Seminario de Titulación", 13, "Ingeniería", ["MEC373"], ""],
+      [1, 1, "MAT021", "Matemáticas I", 8, "Matemática", [], ""],
+      [1, 1, "MAT022", "Matemáticas II", 8, "Matemática", [], ""],
+      [2, 3, "FIS140", "Física General IV", 5, "Física", ["QUI010"], ""],
+      [3, 5, "MEC353", "Mecánica de Máquinas", 5, "Ingeniería", ["MEC220"], ""],
+      [4, 7, "MEC382", "Ingeniería del Mantenimiento", 5, "Ingeniería", ["MEC373"], ""],
+      [6, 11, "MEC5", "Electivo 5", 5, "Optativo", [], ""]
     ];
     // Estado de materias aprobadas (por código)
     let aprobadas = {};
@@ -260,33 +302,53 @@
       // Celdas
       for (let p = 0; p < periodos.length; p++) {
         for (let a = 0; a < anios.length; a++) {
-          // Busca materias de este año y periodo
           let mats = materias.filter(m => m[0] === (a+1) && m[1] === (p+1));
           if (mats.length) {
             mats.forEach((mat, idx) => {
               const div = document.createElement('div');
               div.className = 'materia';
               div.style.background = categorias[mat[5]] || "#e0e0e0";
-              // Determina si está habilitada
+              if (mat[7]) {
+                div.style.backgroundImage = `url('${mat[7]}')`;
+              } else {
+                div.style.backgroundImage = 'none';
+              }
+              // Si está aprobada, tachado y efecto
+              if (aprobadas[mat[2]]) div.classList.add("aprobada");
+              // Si está inhabilitada
               let habilitada = correlativasHabilitadas(mat);
               if (!habilitada) div.classList.add("inhabilitada");
-              // Acciones (editar/eliminar)
+
+              // Tooltip correlativas
+              let correlTip = "";
+              if (mat[6]&&mat[6].length) {
+                correlTip = "Correlativas:\n" + mat[6].join(", ");
+              } else {
+                correlTip = "Sin correlativas";
+              }
+
               div.innerHTML = `
                 <div class="acciones">
                   <button title="Editar" onclick="abrirMateriaEditor(${materias.indexOf(mat)});event.stopPropagation();">✏️</button>
                 </div>
                 <span class="codigo">${mat[2]}</span>
-                <span>${mat[3]}</span>
+                <div class="nombre">${mat[3]}</div>
                 <span class="creditos">${mat[4]}</span>
                 <label class="checkbox-aprobada" title="Aprobar materia">
                   <input type="checkbox" onchange="toggleAprobada('${mat[2]}')" ${aprobadas[mat[2]]?"checked":""}
                     ${!habilitada?"disabled":""}>
                   ✔
                 </label>
-                ${mat[6]&&mat[6].length?`<div style="font-size:0.8em;margin-top:5px;">
-                  Correlativas: <span style="color:#356;">${mat[6].join(", ")}</span>
-                </div>`:""}
+                <div class="tooltip-correlativas">${correlTip}</div>
               `;
+              // Imagen de fondo como <img> para mejor blending si hay
+              if (mat[7]) {
+                let img = document.createElement("img");
+                img.className = "bg-imagen";
+                img.src = mat[7];
+                img.alt = "";
+                div.appendChild(img);
+              }
               malla.appendChild(div);
             });
           } else {
@@ -294,7 +356,7 @@
             const div = document.createElement('div');
             div.innerHTML = '<span style="color:#bbb;font-size:1.2em;cursor:pointer;" title="Agregar materia" onclick="abrirMateriaEditor(null,'+(a+1)+','+(p+1)+')">+</span>';
             div.style.textAlign = "center";
-            div.style.minHeight = "100px";
+            div.style.minHeight = "110px";
             malla.appendChild(div);
           }
         }
@@ -303,12 +365,9 @@
 
     // --- CORRELATIVAS ---
     function correlativasHabilitadas(mat) {
-      // Si la materia no tiene correlativas, está habilitada siempre
       if (!mat[6] || !mat[6].length) return true;
-      // Si todas las correlativas están aprobadas
       return mat[6].every(cod => aprobadas[cod]);
     }
-
     function toggleAprobada(codigo) {
       aprobadas[codigo] = !aprobadas[codigo];
       renderMalla();
@@ -334,7 +393,6 @@
         opt.value = i+1; opt.textContent = periodos[i];
         sp.appendChild(opt);
       }
-      // Categorías
       let sc = document.getElementById('mat-categoria');
       sc.innerHTML = "";
       Object.keys(categorias).forEach(cat=>{
@@ -342,7 +400,6 @@
         opt.value=cat; opt.textContent=cat;
         sc.appendChild(opt);
       });
-      // Si es edición
       if(idx!==null){
         let m = materias[idx];
         document.getElementById('materia-idx').value = idx;
@@ -353,6 +410,7 @@
         sp.value = m[1];
         sc.value = m[5];
         document.getElementById('mat-correlativas').value = m[6]?m[6].join(","):"";
+        document.getElementById('mat-bgimg').value = m[7]||"";
         document.getElementById('btn-borrar-materia').style.display = "";
       } else {
         document.getElementById('materia-idx').value = "";
@@ -363,6 +421,7 @@
         sp.value = periodoSel || 1;
         sc.value = Object.keys(categorias)[0];
         document.getElementById('mat-correlativas').value = "";
+        document.getElementById('mat-bgimg').value = "";
         document.getElementById('btn-borrar-materia').style.display = "none";
       }
     }
@@ -380,7 +439,8 @@
         document.getElementById('mat-nombre').value.trim(),
         parseInt(document.getElementById('mat-creditos').value),
         document.getElementById('mat-categoria').value,
-        correlativas
+        correlativas,
+        document.getElementById('mat-bgimg').value.trim()
       ];
       if(idx!==""){
         materias[idx]=mat;
@@ -512,4 +572,5 @@
     }
   </script>
 </body>
+</html>
 </html>
